Bijayini | Fixing add note button alignment

--- a/ui/app/styles/bahmni-components/_buttons.scss
+++ b/ui/app/styles/bahmni-components/_buttons.scss
@@ -379,7 +379,7 @@ input[type="submit"].secondary-button:hover  {
     padding: 5px;
     @media (max-width:1024px){
       margin: 7px 10px 0 10px;
-      float: left;
+      //float: left;
     }
     .fa-file-o {
         position: relative;
